# e-commerce

./: .gitignore  README.md  pyproject.toml
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_145eef247bfb46b6___init___py.html  z_145eef247bfb46b6_product_category_py.html
src/: product_category.py
tests/: test_product_category.py
