[project]
name = "e-commerce"
version = "0.1.0"
description = ""
authors = [
    {name = "kimikosi77",email = "usgeru@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "flake8 (>=7.3.0,<8.0.0)",
    "black (>=26.3.1,<27.0.0)",
    "mypy (>=1.19.1,<2.0.0)",
    "isort (>=8.0.1,<9.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)"
]

[tool.flake8]
max-line-length = 119

[tool.black]
max-line-length = 119
exclude = '.git'

[tool.mypy]
disallow_untyped_defs = true
no_implict_optional = true
warn_return_any = true
exclude = 'venv'

[tool.isort]
profile = 'black'
line_length = 119